# cracking-the-code-interview

./: .clang-format  .gitignore  1-1.cpp  1-2.cpp  1-3.cpp  17-1.cpp  3-5.cpp  3-6.cpp  5-1.cpp  5-2.cpp  5-3.cpp  5-5.cpp  5-6.cpp  5-8.cpp  CMakeLists.txt  bit.hpp  bitmanip.h
chapter-5/: 5-1.cpp  5-3.cpp  5-5.cpp  5-7.cpp  bit.hpp
